latest copy of 08-08-2024

--- a/src/app/OffBoarding/resignation-approval-hr/resignation-approval-hr.component.html
+++ b/src/app/OffBoarding/resignation-approval-hr/resignation-approval-hr.component.html
@@ -921,7 +921,7 @@
                                                     <td>{{clearancedata.ASSET_NAME}}</td>
                                                     <td>{{clearancedata.DATE_OF_ISSUE | date:'dd-MM-yyy'}}</td>
                                                     <td class="status"><span class="badge bg-success-subtle text-success fs-11 w-100 text-uppercase">{{clearancedata.STATUS}}</span></td>
-                                                    <td>{{clearancedata.DATE_OF_RETURN | date:'M dd,yyy'}}</td>                                              
+                                                    <td>{{clearancedata.DATE_OF_RETURN | date:'dd-MM-yyy'}}</td>                                              
                                                 </tr>
                                                 <!-- <tr class="h-30">
                                                     <td class="fw-semibold">02</td>
