--- a/src/app/approvelevelsetting/approvelevelsetting.component.html
+++ b/src/app/approvelevelsetting/approvelevelsetting.component.html
@@ -402,7 +402,7 @@
                                               <div class="col-lg-1" style="float:right;margin-bottom: 30px;margin-right: 15px;" >
                                                 <div class="pt-4">    
                                                                                                
-                                                  <button type="button" class="btn btn-orange font-type fs-12 add-button text-white" data-bs-toggle="modal" data-bs-target="#SaveModal"(click)="save()" >Save</button>
+                                                  <button type="button" class="btn btn-orange font-type fs-12 add-button text-white" (click)="save()" >Save</button>
                                                 </div>
                                             </div> 
                                           </div><!-- end card body -->
