latest copy of 13-08-2024

--- a/src/app/HiringManagement/candidate-evaluation/candidate-evaluation.component.html
+++ b/src/app/HiringManagement/candidate-evaluation/candidate-evaluation.component.html
@@ -367,7 +367,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-12 p-3" [hidden]="view == 1" >
+                                <div class="col-lg-12 p-3" [hidden]="view == 1||isDisabled" >
                                     <div class="d-flex align-items-center flex-wrap gap-2">
                                         <div class="flex-grow-1 text-center">
                                             <div>
