--- a/src/app/ServiceRequests/salary-certificate/salary-certificate.component.html
+++ b/src/app/ServiceRequests/salary-certificate/salary-certificate.component.html
@@ -127,10 +127,13 @@
                                         <td  class="linehtsty"> <span>:</span><span class="ms-2">{{data.AMOUNT}} /per month</span></td>
                                         <td></td>
                                     </tr>
+                                    <!-- <tr> <td></td> <td></td></tr>
+                                    <tr> <td></td> <td></td></tr>
+                                    <tr> <td></td> <td></td></tr> -->
                                     <tr>
                                         <td></td>
                                         <td class="fw-semibold fs-13 text-blue">Total  </td>
-                                        <td class="fw-semibold fs-13 text-blue"> <span>:</span><span class="ms-2 text-italic"*ngIf="salarytransferdata?.length > 0">{{salarytransferdata[0].GROSS_SALARY }}</span></td>
+                                        <td class="fw-semibold fs-13 text-blue"> <span>:</span><span class="ms-2 text-italic"*ngIf="salarytransferdata?.length > 0">{{salarytransferdata[0].GROSS_SALARY }}  /per month</span></td>
                                     </tr>
                                 </tbody>
                                 
