--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         <div class="bg-overlay"></div>
 
     <!-- auth page content -->
-    <div class="auth-page-content">
+    <div class="auth-page-content" style="overflow-y: scroll;">
         <div class="container">
 
             <!-- end row -->
