--- a/src/app/OffBoarding/exitinterviewform/exitinterviewform.component.html
+++ b/src/app/OffBoarding/exitinterviewform/exitinterviewform.component.html
@@ -1004,7 +1004,7 @@
 
                             <div class="col-lg-12 mb-3" [hidden]="view == 1">
                                 <div class="d-flex align-items-center flex-wrap gap-2">
-                                    <div class="flex-grow-1 text-center"  *ngIf="action == 0">
+                                    <div class="flex-grow-1 text-center"  *ngIf="action == 0" [hidden]="interviewdt != null">
                                         <div  *ngIf="!requestForm.valid">
                                             <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" [disabled]="requestForm.valid" id="validate-btn"><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Submit</button>
                                             <button type="button" class="btn btn-blue btn-label right nexttab nexttab font-type" (click)="Clear()"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Cancel</button>
