--- a/src/app/PerformanceManagement/goal-progress-tracker/goal-progress-tracker.component.html
+++ b/src/app/PerformanceManagement/goal-progress-tracker/goal-progress-tracker.component.html
@@ -271,6 +271,35 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div *ngSwitchCase="category==1 || category==2">
+                                                <div class="row align-items-center gy-3">
+                                                    <div class="col-sm">
+                                                        <div class="align-items-center d-flex ">
+                                                            <!-- <div class="form-check form-check-info mb-2" *ngIf="this.category==0">
+                                                                <input class="form-check-input" type="checkbox" id="formCheck10" value="1" (click)="markcheck()">
+                                                                <label class="form-check-label fs-12 fw-semibold font-type text-uppercase text-blue">
+                                                                    Mark as Assessment Complete
+                                                                </label>
+                                                            </div> -->
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-auto" >
+                                                        <div class="d-flex gap-1 flex-wrap">
+                                                            <!-- <ng-container *ngIf="category == 1 || category == 2; else elseBlock"> -->
+                                                                <button class="btn btn-sm btn-success focus-ring focus-ring-info" type="button">
+                                                                    <span class="fw-medium font-type text-white" style="font-size: 12px;" (click)="updateassessmenttrack()" >Update</span>
+                                                                </button>
+                                                            <!-- </ng-container> -->
+                                                            <!-- <ng-template #elseBlock> -->
+                                                                <!-- <p><button class="btn btn-sm btn-success focus-ring focus-ring-info" type="button" [disabled]="isButtonDisabledSub">
+                                                                    <span class="fw-medium font-type text-white" style="font-size: 12px;" data-bs-toggle="modal" data-bs-target="#RejectModal" >Submit</span>
+                                                                </button></p> -->
+                                                            <!-- </ng-template> -->
+                                                            <!-- <button type="button" id="reassessmnt" [disabled]="isButtonDisabled" *ngIf="this.category==0" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type text-white" data-bs-toggle="modal" data-bs-target="#RejectModal" style="height: 24px;" ><i class="ri-send-plane-fill label-icon align-middle fs-16 ms-2"></i>Send for Reassessment</button> -->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </ng-container>
 
 
